--- a/package.json
+++ b/package.json
@@ -13,9 +13,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.70",
+    "gatsby-image": "^2.2.16",
+    "gatsby-plugin-sass": "^2.1.10",
+    "gatsby-plugin-sharp": "^2.2.19",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-source-contentful": "^2.1.30",
+    "gatsby-source-filesystem": "^2.1.19",
+    "gatsby-transformer-sharp": "^2.2.13",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
